load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm//:jvm.bzl", "jvm_library", "resourcegroup")

resourcegroup(
    name = "runner_resources",
    srcs = glob(["resources/**/*"]),
    strip_prefix = "resources",
)

jvm_library(
    name = "runner",
    module_name = "intellij.termlab.runner",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.java"], allow_empty = True),
    resources = [":runner_resources"],
    deps = [
        "//termlab/sdk",
        "//termlab/core",
        "//termlab/plugins/ssh",
        "//termlab/plugins/sftp",
        "//termlab/plugins/sftp/libs:sshd_sftp",
        "//termlab/plugins/editor",
        "//libraries/sshd-osgi",
        "//platform/analysis-api:analysis",
        "//platform/core-api:core",
        "//platform/core-ui",
        "//platform/editor-ui-api:editor-ui",
        "//platform/ide-core",
        "//platform/platform-api:ide",
        "//platform/platform-impl:ide-impl",
        "//platform/projectModel-api:projectModel",
        "//platform/util",
        "//platform/util:util-ui",
        "//libraries/junit5-launcher",
        "@lib//:gson",
        "@lib//:jetbrains-annotations",
        "@lib//:kotlin-stdlib",
    ],
)

jvm_library(
    name = "runner_test_lib",
    module_name = "intellij.termlab.runner.tests",
    visibility = ["//visibility:public"],
    srcs = glob(["test/**/*.java"], allow_empty = True),
    deps = [
        ":runner",
        "//termlab/sdk",
        "//termlab/plugins/ssh",
        "//libraries/junit5",
        "//libraries/junit5-jupiter",
        "//libraries/junit5-launcher",
        "//platform/core-api:core",
        "//platform/util",
        "@lib//:gson",
        "@lib//:jetbrains-annotations",
        "@lib//:kotlin-stdlib",
    ],
)

java_binary(
    name = "runner_test_runner",
    main_class = "com.termlab.runner.TestRunner",
    runtime_deps = [
        ":runner_test_lib",
        "//libraries/junit5-jupiter",
        "//libraries/junit5-launcher",
    ],
)

exports_files(["intellij.termlab.runner.iml"], visibility = ["//visibility:public"])
