load("@rules_jvm//:jvm.bzl", "jvm_library", "resourcegroup")

resourcegroup(
    name = "sftp_resources",
    srcs = glob(["resources/**/*"]),
    strip_prefix = "resources",
)

jvm_library(
    name = "sftp",
    module_name = "intellij.conch.sftp",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.java"], allow_empty = True),
    resources = [":sftp_resources"],
    deps = [
        "//conch/plugins/sftp/libs:sshd_sftp",
        "//conch/sdk",
        "//conch/core",
        "//conch/plugins/ssh",
        "//platform/analysis-api:analysis",
        "//platform/core-api:core",
        "//platform/core-ui",
        "//platform/editor-ui-api:editor-ui",
        "//platform/ide-core",
        "//platform/lang-api:lang",
        "//platform/platform-api:ide",
        "//platform/platform-impl:ide-impl",
        "//platform/projectModel-api:projectModel",
        "//platform/util:util-ui",
        "//libraries/sshd-osgi",
        "@lib//:jetbrains-annotations",
        "@lib//:kotlin-stdlib",
    ],
)

exports_files(["intellij.conch.sftp.iml"], visibility = ["//visibility:public"])
