load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm//:jvm.bzl", "jvm_library", "resourcegroup")

resourcegroup(
    name = "sftp_resources",
    srcs = glob(["resources/**/*"]),
    strip_prefix = "resources",
)

jvm_library(
    name = "sftp",
    module_name = "intellij.termlab.sftp",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.java"], allow_empty = True),
    resources = [":sftp_resources"],
    deps = [
        "//termlab/plugins/sftp/libs:sshd_sftp",
        "//termlab/sdk",
        "//termlab/core",
        "//termlab/plugins/ssh",
        "//platform/analysis-api:analysis",
        "//platform/core-api:core",
        "//platform/core-ui",
        "//platform/editor-ui-api:editor-ui",
        "//platform/ide-core",
        "//platform/lang-api:lang",
        "//platform/platform-api:ide",
        "//platform/platform-impl:ide-impl",
        "//platform/projectModel-api:projectModel",
        "//platform/util:util-ui",
        "//libraries/sshd-osgi",
        "@lib//:jetbrains-annotations",
        "@lib//:kotlin-stdlib",
    ],
)

jvm_library(
    name = "sftp_test_lib",
    module_name = "intellij.termlab.sftp.tests",
    visibility = ["//visibility:public"],
    srcs = glob(["test/**/*.java"], allow_empty = True),
    deps = [
        ":sftp",
        "//termlab/sdk",
        "//termlab/plugins/ssh",
        "//termlab/plugins/sftp/libs:sshd_sftp",
        "//libraries/sshd-osgi",
        "//libraries/junit5",
        "//libraries/junit5-jupiter",
        "//libraries/junit5-launcher",
        "//platform/ide-core",
        "//platform/util",
        "//platform/util:util-ui",
        "@lib//:jetbrains-annotations",
        "@lib//:kotlin-stdlib",
    ],
)

java_binary(
    name = "sftp_test_runner",
    main_class = "com.termlab.sftp.TestRunner",
    runtime_deps = [
        ":sftp_test_lib",
        "//libraries/junit5-jupiter",
        "//libraries/junit5-launcher",
    ],
)

exports_files(["intellij.termlab.sftp.iml"], visibility = ["//visibility:public"])
