load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm//:jvm.bzl", "jvm_library", "resourcegroup")

resourcegroup(
    name = "tunnels_resources",
    srcs = glob(["resources/**/*"]),
    strip_prefix = "resources",
)

jvm_library(
    name = "tunnels",
    module_name = "intellij.conch.tunnels",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.java"], allow_empty = True),
    resources = [":tunnels_resources"],
    deps = [
        "//conch/sdk",
        "//conch/core",
        "//conch/plugins/ssh",
        "//platform/analysis-api:analysis",
        "//platform/core-api:core",
        "//platform/core-ui",
        "//platform/editor-ui-api:editor-ui",
        "//platform/ide-core",
        "//platform/lang-api:lang",
        "//platform/platform-api:ide",
        "//platform/platform-impl:ide-impl",
        "//platform/projectModel-api:projectModel",
        "//platform/util:util-ui",
        "//libraries/sshd-osgi",
        "//libraries/bouncy-castle-provider",
        "@lib//:jetbrains-annotations",
        "@lib//:gson",
        "@lib//:kotlin-stdlib",
    ],
)

jvm_library(
    name = "tunnels_test_lib",
    module_name = "intellij.conch.tunnels.tests",
    visibility = ["//visibility:public"],
    srcs = glob(["test/**/*.java"], allow_empty = True),
    deps = [
        ":tunnels",
        "//conch/sdk",
        "//conch/plugins/ssh",
        "//libraries/junit5",
        "//libraries/junit5-jupiter",
        "//libraries/junit5-launcher",
        "//libraries/sshd-osgi",
        "@lib//:jetbrains-annotations",
        "@lib//:gson",
    ],
)

java_binary(
    name = "tunnels_test_runner",
    main_class = "com.conch.tunnels.TestRunner",
    runtime_deps = [
        ":tunnels_test_lib",
        "//libraries/junit5-jupiter",
        "//libraries/junit5-launcher",
    ],
)

exports_files(["intellij.conch.tunnels.iml"], visibility = ["//visibility:public"])
